--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.2.3",
+    "powerbi-client": "^2.23.1",
+    "powerbi-client-react": "^1.4.0",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.3"
+    "react-dom": "^18"
+  },
+  "devDependencies": {
+    "webpack": "^5.91.0"
   }
 }
